<resources>
    <string name="app_name">Movies info searcher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movies info searcher</string>
    <string name="nav_header_subtitle">Поиск фильмов</string>
    <string name="nav_header_desc">Заголовок</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Фильмы</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_settings">Настроки</string>
    <string name="menu_find">Поиск</string>
    <string name="title_text_example">Название фильма</string>
    <string name="movie_description">Описание фильма</string>
    <string name="date_text_example">21.03.2021</string>
    <string name="movies_showing_text">В прокате</string>
    <string name="movies_inspected_text">Ожидаются</string>
    <string name="find_text">Поиск фильмов в разработке</string>
    <string name="movie_selected">Выбран фильм</string>
    <string name="in_developing_text">В разработке</string>
    <string name="error_text">Error</string>
    <string name="repeat_text">Повтор</string>
    <string name="internet_error_message">Ошибка подключения. Проверьте интернет</string>
    <string name="position">Позиция</string>
    <string name="link_retry_title">Повтор</string>
    <string name="title_movie_example">Название фильма</string>
    <string name="menu_detail">подробнее..</string>
    <string name="overview_movie_example">Описание фильма</string>
    <string name="release_date_movie_example">2021&#8212;02&#8212;02</string>
    <string name="release_date">Release date:</string>
    <string name="snackBar_example_text">Открытие детализации</string>
    <string name="connectivity_action">Изменение связи</string>
    <string name="menu_send">Поделиться</string>
    <string name="send_text">Функция &#782;Поделиться&#782; в разработке</string>
    <string name="rating_example">4.5</string>
    <string name="movie_budget_example">10000</string>
    <string name="movie_original_language">Ru</string>
    <string name="movie_original_title">Оригинальное название</string>
    <string name="movie_popularity">50000.00</string>
    <string name="movie_vote_count">56</string>
    <string name="movie_homePage">Home page: google.ru</string>
    <string name="movie_revenue">50000</string>
    <string name="movie_runtime">80 мин</string>
    <string name="movie_status">Released</string>
    <string name="movie_tag_line">#Не верь всему, что видишь</string>
    <string name="movie_error_loading">Ошибка загрузки данных</string>
    <string name="movie_trailer_message">Отобразить трейлер. В разработке&#8230;</string>
    <string name="movie_home_page_message">Открыть домашнюю страницу. В разработке&#8230;</string>
    <string name="movie_group_text_example">Название группы</string>
    <string name="adult_context">Разрешить взрослый контент</string>
    <string name="shared_preference_name">movie_preference</string>
    <string name="key_adult_accessed">adult_accessed</string>
    <string name="movie_comment">Комментарий к фильму</string>
    <string name="comment_hint">Комментарий к фильму</string>
    <string name="dialog_title">Комментарий</string>
    <string name="dialog_message">Оставьте свой отзыв о фильме \u0020</string>
    <string name="dialog_hint">Ваш комментарий к фильму</string>
    <string name="dialog_positive_btn_title">ОК</string>
    <string name="dialog_negative_btn_title">ОТМЕНА</string>
    <string name="menu_history">История просмотров</string>
    <string name="menu_clear">Удалить все</string>
    <string name="clear_history_success_text">История просмотра успешно очищена.</string>
    <string name="clear_history_fail_text">Отсутствуют данные для удаления</string>
    <string name="menu_contact">Контакты</string>
    <string name="need_permission_text">I need this permission very much!</string>
    <string name="grant">Grant</string>
    <string name="need_permission_failed">Просмотр контактов запрещен пользователем</string>
    <string name="menu_map">Карта</string>
    <string name="maps_lat_hint_text">широта</string>
    <string name="maps_long_hint_text">долгота</string>
    <string name="my_city">Это Ачинск</string>
    <string name="address_example">Адрес такой-то</string>
    <string name="error_enter_coordinats_text">Проверьте правильность ввода широты и долготы</string>
    <string name="find_btn_text">Найти</string>
</resources>