<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitude_text_input_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/constraint_def_percent">

        <EditText
            android:id="@+id/latitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/maps_lat_hint_text"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitude_text_input_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/latitude_text_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/constraint_def_percent">

        <EditText
            android:id="@+id/longitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/maps_long_hint_text"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginHorizontal="@dimen/card_text_margin_horizontal"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_text_input_layout"
        tools:text="@string/address_example" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_btn"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:backgroundTint="@color/light_gray"
        android:insetTop="@dimen/zero"
        android:insetBottom="@dimen/zero"
        android:text="@string/find_btn_text"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/longitude_text_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        tools:context=".ui.map.MapsFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>